--- a/packages/SystemUI/res/values/dcm_styles.xml
+++ b/packages/SystemUI/res/values/dcm_styles.xml
@@ -83,5 +83,21 @@
         <item name="android:shadowRadius">1.0</item>
         <item name="android:shadowDx">2.0</item>
         <item name="android:shadowDy">2.0</item>
-    </style>    
+    </style>
+
+    <!-- Network Stats -->
+    <style name="TextAppearance.StatusBar.NetworkStats"
+           parent="@*android:style/TextAppearance.StatusBar">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:layout_gravity">center_vertical</item>
+        <item name="android:textSize">@dimen/network_stats_text_size</item>
+        <item name="android:textColor">#ffffff</item>
+        <item name="android:paddingEnd">2dp</item>
+        <item name="android:paddingTop">0dp</item>
+        <item name="android:layout_marginTop">0dp</item>
+        <item name="android:includeFontPadding">false</item>
+    </style>
+
 </resources>
